# padhanam

./: .env.example  .gitignore  .gitmessage  .importlinter  .trivyignore  CLAUDE.md  Caddyfile  LICENSE  Makefile  README.md  alembic.ini  compose.yaml  conftest.py  pyproject.toml
alembic/control_plane/: env.py
alembic/control_plane/versions/: 2026_04_30_0001_create_tenant_registry.py  2026_04_30_0002_create_cp_tenant_audit.py
alembic/tenant/: env.py
alembic/tenant/versions/: 2026_04_30_0001_create_tenant_audit.py  2026_04_30_0002_audit_sentinel_check.py
apps/api/: Dockerfile  main.py  middleware.py  pyproject.toml
apps/api/routers/: health.py  inference.py  tenant_audit.py
charter/: bet.md  current-package.md  decisions.md  deferred-decisions.md  packages.md  principles.md  schema.md
contexts/audit/: api.py  pyproject.toml
contexts/audit/adapters/outbound/: noop.py
contexts/audit/adapters/outbound/postgres/: __init__.py  audit.py
contexts/audit/domain/: events.py  ports.py
contexts/inference/: api.py  pyproject.toml
contexts/inference/adapters/outbound/litellm/: __init__.py  adapter.py
contexts/inference/application/: __init__.py  request_completion.py
contexts/inference/domain/: __init__.py  completion.py  errors.py
contexts/inference/ports/: __init__.py  inference_port.py
contexts/observability/: api.py  pyproject.toml
contexts/observability/adapters/outbound/langfuse/: __init__.py  adapter.py
contexts/observability/domain/: __init__.py  trace.py
contexts/observability/ports/: __init__.py  trace_query_port.py
contexts/tenancy/: api.py  pyproject.toml
contexts/tenancy/adapters/outbound/postgres/: __init__.py  registry.py
contexts/tenancy/adapters/outbound/sqlalchemy/: session_factory.py
contexts/tenancy/application/: __init__.py  connection_resolution.py  use_cases.py
contexts/tenancy/domain/: __init__.py  encrypted_credentials.py  tenant.py  tenant_connection_config.py  tenant_id.py
contexts/tenancy/ports/: __init__.py  tenant_registry_port.py
docs/: README.md  brief.md
docs/archive/: README.md
docs/security/: checklist.md  exceptions.md  scheduled-checks.md
docs/security/scheduled-check-reports/: 2026-04-30.md  2026-05-01.md
log/: audits.md  packages.md  sessions.md
ops/: derive_env.py  migrate.py  run_scheduled_checks.py  scheduled_checks.yaml  seed_tenants.py  smoke_config.py
ops/litellm/: config.yaml
padhanam/config/: __init__.py  base.py  inference.py  observability.py  profiles.py  security.py  tenancy.py
padhanam/events/: __init__.py  bus.py
padhanam/observability/: __init__.py  credential_scrub.py  security_events.py
padhanam/security/: __init__.py  auth.py  crypto.py  policy.py
platform/config/: __init__.py  base.py  inference.py  observability.py  security.py
platform/observability/: __init__.py  security_events.py
platform/security/: __init__.py  auth.py  crypto.py  policy.py
shared_kernel/: __init__.py  types.py
tests/_enforcement/: _discovery.py  test_dockerfile_workspace_coverage.py  test_host_port_bindings.py  test_lint_violations.py  test_no_getenv.py  test_no_plaintext_in_state.py  test_no_vendor_in_domain.py
tests/contract/tenant_isolation/: README.md  conftest.py  test_audit_isolation.py  test_registry_isolation.py
tests/integration/: test_p3_full_slice.py
tests/integration/api/: conftest.py  test_auth_coverage.py  test_trace_propagation.py
tests/integration/contexts/tenancy/: test_connection_resolution_e2e.py
tests/unit/contexts/audit/: test_events.py  test_noop_adapter.py
tests/unit/contexts/audit/adapters/: test_postgres_audit.py
tests/unit/contexts/inference/: test_litellm_adapter.py  test_request_completion.py
tests/unit/contexts/observability/: test_langfuse_stub.py
tests/unit/contexts/tenancy/: test_encrypted_credentials.py  test_tenant.py  test_tenant_connection_config.py  test_tenant_id.py
tests/unit/contexts/tenancy/application/: test_connection_resolution.py  test_use_cases.py
tests/unit/contexts/tenancy/ports/: test_tenant_registry_port_contract.py
tests/unit/padhanam/config/: test_loading.py
tests/unit/padhanam/events/: test_bus.py
tests/unit/padhanam/observability/: test_credential_scrub.py  test_security_events.py
tests/unit/padhanam/security/: test_auth.py  test_crypto.py  test_policy.py
tests/unit/platform/config/: test_loading.py
tests/unit/platform/observability/: test_security_events.py
tests/unit/platform/security/: test_auth.py  test_crypto.py  test_policy.py
tests/unit/vadakkan/config/: test_loading.py
tests/unit/vadakkan/events/: test_bus.py
tests/unit/vadakkan/observability/: test_credential_scrub.py  test_security_events.py
tests/unit/vadakkan/security/: test_auth.py  test_crypto.py  test_policy.py
vadakkan/config/: __init__.py  base.py  inference.py  observability.py  profiles.py  security.py  tenancy.py
vadakkan/events/: __init__.py
vadakkan/observability/: __init__.py  credential_scrub.py  security_events.py
vadakkan/security/: __init__.py  auth.py  crypto.py  policy.py
