[project]
name = "padhanam"
version = "0.0.0"
description = "Padhanam — local-first multi-tenant AI optimization platform. Cross-cutting platform package and uv workspace root (D16, D30)."
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "cryptography>=43",
    "pyjwt>=2.9",
    # Alembic is operator tooling for migrations (D34). It belongs to the
    # cross-cutting platform package because both control-plane (S10) and
    # per-tenant (S11) tracks invoke it; per-context manifests would
    # duplicate the dep without scoping benefit.
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # PyYAML for the scheduled-checks runner (D25); keeps ops tooling
    # at the platform layer rather than dragging YAML into a context.
    "pyyaml>=6",
    # Workspace members are pulled in as deps so `uv sync` from the root
    # installs every member's third-party deps into the shared venv. Each
    # member declares its own scoped third-party deps in its pyproject;
    # the root never names litellm, fastapi, or langfuse directly (D30).
    "padhanam-inference",
    "padhanam-observability",
    "padhanam-audit",
    "padhanam-tenancy",
    "padhanam-api",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "import-linter>=2.1",
    "pip-audit>=2.7",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "contexts/inference",
    "contexts/observability",
    "contexts/audit",
    "contexts/tenancy",
    "apps/api",
]

[tool.uv.sources]
padhanam-inference = {workspace = true}
padhanam-observability = {workspace = true}
padhanam-audit = {workspace = true}
padhanam-tenancy = {workspace = true}
padhanam-api = {workspace = true}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
