[project]
name = "padhanam-api"
version = "0.0.0"
description = "Padhanam FastAPI application (apps/api/). Composes the inference and observability contexts and wires authentication middleware in front of every route."
requires-python = ">=3.14"
# FastAPI and its OTel instrumentation live here, not at the root, so
# non-app code cannot import fastapi (D30). Uvicorn ships in the dev
# image; production ASGI server selection is a deployment-time choice.
#
# httpx is shared across this and contexts/inference, but apps/api
# declares it directly because the FastAPI test client uses it
# (httpx-based, since starlette's TestClient migrated off requests).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[tool.uv]
package = false
