[project]
name = "padhanam-audit"
version = "0.0.0"
description = "Audit bounded context (D22). Append-only hash-chained event store, scaffolded in S5; real Postgres adapter lands in P3 with the tenant registry."
requires-python = ">=3.14"
# Audit's domain is pure — the chain helpers in domain/events.py use only
# stdlib hashlib/json. The no-op adapter logs through stdlib logging. The
# real Postgres adapter (S12, D37) introduces SQLAlchemy + asyncpg as the
# audit context's first vendor deps; the domain layer remains pure
# (D16: domain code never imports vendor SDKs).
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
]

[tool.uv]
package = false
